--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img class="logo" src="./images/MakaLogo.png" alt="logo">
         <nav>
             <ul class="nav__links">
-                <li><a href="https://www.google.com">MakaBot</a></li>
+                <li><a href="https://makabot.statuspage.io">Status</a></li>
+                <li><a href="#">MakaBot</a></li>
+                <li><a href="https://github.com/path1337">GitHub</a></li>
             </ul>
         </nav>
         <a class="cta" href="https://discord.gg/fugSB6w2Na"><button>Support</button></a>
@@ -26,6 +28,7 @@
     <section class="title">
         <div class="head-title">
             <h1 class="head-first">MakaBot does all<br></h1><h1 class="head-second">the Work.</h1>
+            <br>
             <br>
             <a class="invbutton" href="https://discord.com/api/oauth2/authorize?client_id=891686988208558160&permissions=1559571655&scope=bot"><button>Invite MakaBot to Discord</button></a>
         </div>
