--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="MakaBot, Discord Bot, Discord, Bot, MusicDiscordBot, MusicBot">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/MakaLogo.png" type="image/icon type">
     <script src="./script.js"></script>
 </head>
 
@@ -36,7 +37,7 @@
 
     <footer>
         <div class="footer">
-            <h1 class="footer-text">© Copyright 2022 MakaBot all right reserved</h1>
+            <h1 class="footer-text">© Copyright 2022 MakaBot all rights reserved</h1>
         </div>
     </footer>
 </body>
