--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <img class="logo" src="./images/MakaLogo.png" alt="logo">
         <nav>
             <ul class="nav__links">
-                <li><a href="https://makabot.statuspage.io">Status</a></li>
-                <li><a href="#">MakaBot</a></li>
-                <li><a href="https://github.com/path1337">GitHub</a></li>
+                <li><a class="status-nav" href="https://makabot.statuspage.io">Status</a></li>
+                <li><a class="title-nav" href="#">MakaBot</a></li>
+                <li><a class="github-nav" href="https://github.com/path1337">GitHub</a></li>
             </ul>
         </nav>
-        <a class="cta" href="https://discord.gg/fugSB6w2Na"><button>Support</button></a>
+        <a class="cta" href="https://discord.gg/fugSB6w2Na"><button class="glow-on-hover">Support</button></a>
     </header>
 
     <section class="title">
@@ -31,7 +31,7 @@
             <h1 class="head-first">MakaBot does all<br></h1><h1 class="head-second">the Work.</h1>
             <br>
             <br>
-            <a class="invbutton" href="https://discord.com/api/oauth2/authorize?client_id=891686988208558160&permissions=1559571655&scope=bot"><button>Invite MakaBot to Discord</button></a>
+            <a class="invbutton" href="https://discord.com/api/oauth2/authorize?client_id=891686988208558160&permissions=1559571655&scope=bot"><button class="glow-on-hover">Invite MakaBot to Discord</button></a>
         </div>
     </section>
 
